--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -33,6 +33,7 @@
   "freeWordCounterOnline": "Kostenloser Online-Wortzähler - Wörter, Zeichen, Sätze zählen",
   "freeWordCounterDescription": "Kostenloses Online-Wortzählungstool. Zählen Sie Wörter, Zeichen, Sätze, Absätze, Lesezeit & Schlüsselwortdichte. Schnelle, genaue Textanalyse für Studenten, Autoren & Profis.",
   "bestFreeTool": "Das beste kostenlose Online-Tool zum Zählen von Wörtern, Zeichen, Sätzen, Absätzen, Lesezeit und Schlüsselwortdichte.",
+  "whyUseWordCounter": "Fügen Sie Ihren Text unten ein, um sofortige Wort- und Zeichenzahlen zu erhalten. Perfekt für Autoren, Studenten und Blogger, die bestimmte Wortgrenzen für Aufsätze, Blog-Beiträge und Social-Media-Inhalte einhalten müssen.",
   "writingTips": "Schreibtipps",
   "seoContentOptimization": "SEO-Inhalts-Optimierung",
   "textAnalysisTechniques": "Textanalysetechniken",
