--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -33,6 +33,7 @@
   "freeWordCounterOnline": "Free Word Counter Online - Count Words, Characters, Sentences",
   "freeWordCounterDescription": "Free online word counter tool. Count words, characters, sentences, paragraphs, reading time & keyword density. Fast, accurate text analysis for students, writers & professionals.",
   "bestFreeTool": "The best free online tool to count words, characters, sentences, paragraphs, reading time, and keyword density.",
+  "whyUseWordCounter": "Paste your text below to get instant word and character counts. Perfect for writers, students, and bloggers who need to meet specific word limits for essays, blog posts, and social media content.",
   "writingTips": "Writing Tips",
   "seoContentOptimization": "SEO Content Optimization",
   "textAnalysisTechniques": "Text Analysis Techniques",
