--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -33,6 +33,7 @@
   "freeWordCounterOnline": "Contador de Palabras Gratis en Línea - Contar Palabras, Caracteres, Frases",
   "freeWordCounterDescription": "Herramienta gratuita de contador de palabras en línea. Cuente palabras, caracteres, frases, párrafos, tiempo de lectura y densidad de palabras clave. Análisis de texto rápido y preciso para estudiantes, escritores y profesionales.",
   "bestFreeTool": "La mejor herramienta en línea gratuita para contar palabras, caracteres, frases, párrafos, tiempo de lectura y densidad de palabras clave.",
+  "whyUseWordCounter": "Pegue su texto a continuación para obtener recuentos instantáneos de palabras y caracteres. Perfecto para escritores, estudiantes y bloggers que necesitan cumplir con límites de palabras específicos para ensayos, publicaciones de blog y contenido de redes sociales.",
   "writingTips": "Consejos de Escritura",
   "seoContentOptimization": "Optimización de Contenido SEO",
   "textAnalysisTechniques": "Técnicas de Análisis de Texto",
