--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -33,6 +33,7 @@
   "freeWordCounterOnline": "Compteur de Mots Gratuit en Ligne - Compter les Mots, Caractères, Phrases",
   "freeWordCounterDescription": "Outil gratuit de compteur de mots en ligne. Comptez les mots, les caractères, les phrases, les paragraphes, le temps de lecture et la densité des mots-clés. Analyse de texte rapide et précise pour les étudiants, les écrivains et les professionnels.",
   "bestFreeTool": "Le meilleur outil en ligne gratuit pour compter les mots, les caractères, les phrases, les paragraphes, le temps de lecture et la densité des mots-clés.",
+  "whyUseWordCounter": "Collez votre texte ci-dessous pour obtenir instantanément le nombre de mots et de caractères. Parfait pour les écrivains, les étudiants et les blogueurs qui doivent respecter des limites de mots spécifiques pour les essais, les articles de blog et les contenus des réseaux sociaux.",
   "writingTips": "Conseils d'Écriture",
   "seoContentOptimization": "Optimisation de Contenu SEO",
   "textAnalysisTechniques": "Techniques d'Analyse de Texte",
