--- a/public/locales/hi/translation.json
+++ b/public/locales/hi/translation.json
@@ -33,6 +33,7 @@
   "freeWordCounterOnline": "नि: शुल्क ऑनलाइन शब्द गिनती - शब्द, वर्ण, वाक्य गिनें",
   "freeWordCounterDescription": "नि: शुल्क ऑनलाइन शब्द गिनती उपकरण। शब्द, वर्ण, वाक्य, अनुच्छेद, पढ़ने का समय और कीवर्ड घनत्व गिनें। छात्रों, लेखकों और पेशेवरों के लिए त्वरित, सटीक पाठ विश्लेषण।",
   "bestFreeTool": "शब्द, वर्ण, वाक्य, अनुच्छेद, पढ़ने का समय और कीवर्ड घनत्व की गिनती के लिए सर्वश्रेष्ठ नि: शुल्क ऑनलाइन उपकरण।",
+  "whyUseWordCounter": "त्वरित शब्द और वर्ण गिनती प्राप्त करने के लिए अपना पाठ नीचे चिपकाएं। निबंधों, ब्लॉग पोस्ट और सोशल मीडिया सामग्री के लिए विशिष्ट शब्द सीमा को पूरा करने के लिए लेखकों, छात्रों और ब्लॉगर्स के लिए उत्तम।",
   "writingTips": "लेखन युक्तियाँ",
   "seoContentOptimization": "एसईओ सामग्री अनुकूलन",
   "textAnalysisTechniques": "पाठ विश्लेषण तकनीकें",
