--- a/public/locales/ja/translation.json
+++ b/public/locales/ja/translation.json
@@ -33,6 +33,7 @@
   "freeWordCounterOnline": "無料オンラインワードカウンター - 単語数、文字数、文数をカウント",
   "freeWordCounterDescription": "無料のオンラインワードカウンターツール。単語数、文字数、文数、段落数、読了時間、キーワード密度をカウントします。学生、作家、プロフェッショナルのための迅速で正確なテキスト分析。",
   "bestFreeTool": "単語数、文字数、文数、段落数、読了時間、キーワード密度をカウントするための最高の無料オンラインツール。",
+  "whyUseWordCounter": "下にテキストを貼り付けて、即座に単語数と文字数を確認してください。エッセイ、ブログ記事、SNSコンテンツのための特定の語数制限を満たす必要があるライターや学生、ブロガーに最適です。",
   "writingTips": "執筆のヒント",
   "seoContentOptimization": "SEOコンテンツ最適化",
   "textAnalysisTechniques": "テキスト分析技術",
