--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -33,6 +33,7 @@
   "freeWordCounterOnline": "免费在线字数统计 - 计算字数、字符数、句子数",
   "freeWordCounterDescription": "免费的在线字数统计工具。计算单词、字符、句子、段落、阅读时间及关键词密度。为学生、作家和专业人士提供快速、准确的文本分析。",
   "bestFreeTool": "用于计算字数、字符、句子、段落、阅读时间和关键词密度的最佳免费在线工具。",
+  "whyUseWordCounter": "在下方粘贴您的文本以立即获得字数和字符数统计。非常适合需要满足文章、博客文章和社交媒体内容特定字数限制的作家、学生和博主。",
   "writingTips": "写作技巧",
   "seoContentOptimization": "SEO内容优化",
   "textAnalysisTechniques": "文本分析技术",
